# lipml

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh  lipml  pseudocodes.md  readme.md
src/: LinearRegression.cpp  LogisticRegression.cpp  main.cpp  proto-image.cpp  proto-image.h
src/data-structures/: Array.cpp  LinkedList.cpp  stack.cpp
src/include/: iftImage.h  iftSegmentation.h
src/standard/: commons.h  memory.h
